Added a common build-conventions plugin